--- a/Task1 Grip.ipynb
+++ b/Task1 Grip.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Task 1:\n",
-    "## _Predict the percentage of students based on the no. of study    hours.\n",
+    "## _Predict the aryan percentage of students based on the no. of study    hours.\n",
     "\n",
     "\n",
     "\n"
